# firewheel

./: Cargo.toml  LICENSE  README.md  build.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/petal_drive/: Cargo.toml
examples/petal_drive/src/: main.rs
examples/test-app/: Cargo.toml
examples/test-app/src/: label_button.rs  main.rs
src/: align.rs  anchor.rs  app_window.rs  application.rs  background.rs  bg_color.rs  canvas.rs  core_types.rs  draw_layer.rs  error.rs  event.rs  layer.rs  lib.rs  message.rs  primitive.rs  region.rs  region_tree.rs  root.rs  root_region.rs  runner.rs  settings.rs  size.rs  texture.rs  texture_handle.rs  texture_source.rs  wgpu_renderer.rs  widget.rs  widget_node_set.rs  window_canvas.rs
src/core_types/: bounds.rs  color.rs  fill.rs  font.rs  geometry.rs  hasher.rs  mod.rs  point.rs  rectangle.rs  size.rs  types.rs  vector.rs  viewport.rs
src/gl_renderer/: canvas_renderer.rs  layer_renderer.rs  mod.rs
src/glow_renderer/: background_layer_renderer.rs  layer_renderer.rs  mod.rs  renderer.rs  widget_layer_renderer.rs
src/layer/: background_layer.rs  mod.rs  region_tree.rs  widget_layer.rs
src/layer/widget_layer/: region_tree.rs
src/node/: background_node.rs  mod.rs  panel.rs  tree.rs  widget_node.rs
src/primitive/: image.rs  layer.rs  mod.rs  tree.rs  triangle.rs
src/renderer/: background_layer_renderer.rs  layer_renderer.rs  mod.rs  opengl.rs  wgpu_renderer.rs  widget_layer_renderer.rs
src/renderer/opengl/: shader.rs
src/renderer/wgpu_renderer/: background.rs  quad_pipeline.rs  text_pipeline.rs  texture_pipeline.rs  triangle_pipeline.rs
src/renderer/wgpu_renderer/shader/: blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
src/renderer/wgpu_renderer/texture_pipeline/: atlas.rs
src/renderer/wgpu_renderer/texture_pipeline/atlas/: allocation.rs
src/renderer/wgpu_renderer/triangle_pipeline/: msaa.rs
src/shader/: image.frag  image.frag.spv
src/wgpu_renderer/: background.rs  image.rs  mod.rs  text_pipeline.rs  texture.rs  texture_pipeline.rs  viewport.rs
src/wgpu_renderer/shader/: image.frag  image.frag.spv  image.vert  image.vert.spv
src/wgpu_renderer/texture/: atlas.rs
src/wgpu_renderer/texture/atlas/: allocation.rs  allocator.rs  entry.rs  layer.rs
src/wgpu_renderer/texture_pipeline/: atlas.rs  mod.rs
src/wgpu_renderer/texture_pipeline/atlas/: allocation.rs  allocator.rs  entry.rs  mod.rs
src/widgets/: background.rs  label_button.rs  mod.rs  tree.rs
