[package]
name = "goldenrod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/hello-world",
]

[dependencies]
keyboard-types = { version = "0.6.1", default-features = false }
nanovg = { version = "1.0", default-features = false, features = ["gl3"] }
glow = "0.11"
raw-window-handle = "0.4"
log = "0.4"
fnv = "1.0"