[package]
name = "firewheel"
version = "0.0.1"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["ui", "gui", "barebones", "performance"]
categories = ["gui"]
description = "(WIP) A low-level, barebones, \"DIY\" toolkit aimed at making high-performance GUIs"
documentation = "https://docs.rs/firewheel"
repository = "https://github.com/MeadowlarkDAW/firewheel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/test-app",
]

[features]
default = ["winit", "glutin", "image-loading"]
image-loading = ["femtovg/image-loading"]

[dependencies]
keyboard-types = { version = "0.6.1", default-features = false }
#nanovg = { version = "1.0", default-features = false, features = ["gl3"] }
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "20dc7ef142004736f1ba1c626dd9c5bb556dde14", default-features = false }
glutin = { version = "0.30", optional = true }
winit = { version = "0.27", optional = true }
log = "0.4"
fnv = "1.0"