[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firewheel = { path = "../../" }
raw-gl-context = { version = "0.1" }
gl = { version = "0.14" }
raw-window-handle = "0.4"
winit = "0.27"
env_logger = "0.9"
log = "0.4"