[package]
name = "hello_world"
version = "0.1.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goldenrod = { path = "../../" }
baseview = { git = "https://github.com/RustAudio/baseview.git", branch = "master" }
raw-window-handle = "0.3"
futures = "0.3"