[package]
name = "test-app"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firewheel = { path = "../../" }
glutin = "0.30"
winit = "0.27"
raw-window-handle = "0.5"
env_logger = "0.9"
log = "0.4"